Fixed bottom spacing for the side menu.

--- a/src/calendarjs.scss
+++ b/src/calendarjs.scss
@@ -464,6 +464,10 @@ div.calendar {
                     }
                 }
             }
+
+            &:last-of-type {
+                margin-bottom: $spacing;
+            }
         }
     }
 
